# lottery_donate-contract

./: CMakeLists.txt  README.md  README.txt
include/: lottery_donate.hpp
src/: CMakeLists.txt  lottery_donate.cpp
